# acceleratedmodules

./: .dockerignore  .gitignore  Dockerfile  README.md
cython-optimized/: setup.py  simulation.c  simulation.pyx
cythonsim/: setup.py  simulation.c  simulation.pyx
rustoclsim/: Cargo.toml
rustoclsim/src/: lib.rs  simulation.cl
rustsim/: .gitignore  Cargo.toml
rustsim/src/: lib.rs
