[package]
name = "rustoclsim"
version = "0.1.0"
authors = ["Sean Gallagher <stgallag@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "^0.7"
zipf = "^6.1"
ocl = "^0.19"
failure = "^0.1"

[lib]
name = "rustoclsim"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.8.2"
features = ["extension-module"]