[package]
name = "rustsim"
version = "0.1.0"
authors = ["Sean Gallagher <stgallag@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "^0.7"
zipf = "^6.1"

[lib]
name = "rustsim"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.8.2"
features = ["extension-module"]